--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/output.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -17,7 +18,7 @@
  
         <div class="container mx-auto lg:w-[90%]   py-2 grid grid-cols-6 align-middle">
             <div class="lg:col-span-1  col-span-2 max-[180px] min-[100px] px-3">
-                <img src="/images/Art_of_bicycle_trips_Final_logo2-06a88ab3f31618d868863a9d87f7e6ce.png" width="180"
+                <img src="images/logo.png" width="180"
                     alt="">
             </div>
 
@@ -631,7 +632,7 @@
         <div class="container mx-auto lg:w-[90%] grid grid-cols-3 gap-4  px-4 md:px-6">
             <div class=" lg:col-span-1 col-span-3 flex flex-col items-center lg:items-start text-center sm:text-left">
                 <div class="mb-6">
-                    <img src="images/Art_of_bicycle_trips_Final_logo2-06a88ab3f31618d868863a9d87f7e6ce.png"
+                    <img src="images/logo.png"
                         alt="Company Logo" class="h-12">
                 </div>
                 <p class="text-gray-400 mb-6 text-sm md:text-base">
